force-app/main/default/objects/Task__c/fields/ActivityGroupId__c.field-meta.xml
<CustomField>
    <fullName>ActivityGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Group</label>
    <referenceTo>ActivityGroup__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>