force-app/main/default/objects/Task__c/fields/AdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentReason__c</fullName>
    <label>Adjustment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>