force-app/main/default/objects/Task__c/fields/CalculatedDuration__c.field-meta.xml
<CustomField>
    <fullName>CalculatedDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculated Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>