force-app/main/default/objects/Task__c/fields/EstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>