force-app/main/default/objects/Task__c/fields/ResourceRole__c.field-meta.xml
<CustomField>
    <fullName>ResourceRole__c</fullName>
    <formula>ResourceRoleId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Role</label>
    <type>Text</type>
</CustomField>