force-app/main/default/objects/Task__c/fields/RoleSummaryId__c.field-meta.xml
<CustomField>
    <fullName>RoleSummaryId__c</fullName>
    <label>Role Summary</label>
    <referenceTo>TaskRoleSummary__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>