force-app/main/default/objects/Task__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Template</label>
    <referenceTo>TaskTemplate__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>